# Suffix_Tree

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  compactSuffixTree.cpp  compactSuffixTree.hpp  suffixTree.cpp  suffixTree.hpp
